[package]
name = "whirlwind"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.101"
bytemuck = { version = "1.25.0", features = ["derive"] }
env_logger = "0.11.8"
glam = "0.31.0"
image = "0.25.9"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "28.0.0"
whirlwind_obj = { path = "../whirlwind_obj" }
winit = { version = "0.30.12", features = ["android-native-activity"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "28.0.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
